--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <link rel="stylesheets"href="style.css">
  </head> 
  <body style="background-color:cyan;"> <div style="color:green";>
-  <h6 style="text-align:center"> 🏥 HEALTH CARE </h6> </div>
+  <h1 style="text-align:center"> 🏥 HEALTH CARE </h1> </div>
   <div class="row"> 
    <div class="col-8"> 
      <img src="DT0Ai93X0AA0b-E.png"width="120" height="60"> </h5> 
@@ -432,36 +432,36 @@
     <br> 
     <footer> 
      <div class="row"> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
-      <div class="col-4" style="background-color: cadetblue;"> 
+      <div class="col-4" style="background-color: cyan;"> 
        <div> 
         <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
@@ -944,36 +944,36 @@
     <br> 
     <footer> 
      <div class="row"> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
-      <div class="col-4" style="background-color: cadetblue;"> 
+      <div class="col-4" style="background-color: cyan;"> 
        <div> 
         <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan ;"> 
        <div> 
         <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan ;"> 
        <div> 
         <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
@@ -1178,7 +1178,7 @@
    <div class="tab-pane container fade" id="contactus"style="background-color::pink";>
      
     <div class="wrapper"> 
-     <h2>Contact Details</h2> 
+     <h2 style="text-align:center">Contact Details</h2> 
      <div class="input_field"> 
       <input type="text" name="first name" id="fname" placeholder="enter first name"> 
      </div> 
@@ -1608,7 +1608,7 @@
     <div class="row"> 
      <div class="col-12" style="background-color: pink;"> 
       <div style="color: forestgreen;"> 
-       <h1>Pulmonary</h1> 
+       <h1 style="color:green;" style="text-align:center">Pulmonary</h1> 
       </div> 
       <p>Pulmonary Medicine at Health care Hospitals provides expertise in a broad range of diseases including asthma, COPD, critical care, cystic fibrosis, interstitial lung disease, lung cancer, neuromuscular disease, pulmonary hypertension, sarcoidosis, and sleep medicine. The smoke cessation clinics, COPD clinics are specialized clinics which offer tailor made programs and run by a team of Pulmonologist and paramedical teams. Our smoke cessation programs are the best in the country with huge success rate and are implemented by many corporate companies for their employees. Hospitals is your one-stop destination to book the finest Pulmonologist in your town. </p> 
       <div> 
@@ -1618,43 +1618,43 @@
     </div> 
     <br> 
     <div> 
-     <button class="btn btn-primary">Book An Appointment </button> 
+     <button style="text-align:center" class="btn btn-primary">Book An Appointment </button> 
     </div> 
     <!--end Excellence--> 
     <br> 
     <br> 
     <footer> 
      <div class="row"> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
-      <div class="col-4" style="background-color: cadetblue;"> 
+      <div class="col-4" style="background-color: cyan;"> 
        <div> 
         <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
@@ -1857,46 +1857,46 @@
     </footer> 
    </div> 
    <div class="tab-pane container fade" id="payonline"> 
-    <h1><button class="btn btn-warning" style="color: white;">PAY NOW</button> </h1> 
-    <h3>Make A Payment</h3> 
-    <h1><img src="online-payment-1-1.jpg " alt="asha" height="500px" width="800px" < h1> <br> </h1> 
+    <h1 style="text-align:center"><button class="btn btn-warning" style="color: white;">PAY NOW</button> </h1> 
+    <h3 style="text-align:center">Make A Payment</h3> 
+    <h1><img src="online-payment-1-1.jpg " alt="asha" height="500px" width="750px" < h1> <br> </h1> 
     <br> 
-    <h1><button class="btn btn-warning" style="color: white;">PAY NOW</button> </h1> 
-    <h3>Make A Deposit</h3> 
-    <h1><img src="aktualnosci_6-1024x620.jpg" alt="asha" height="500px" width="800px" < h1> </h1> 
+    <h1 style="text-align:center"><button class="btn btn-warning" style="color: white;">PAY NOW</button> </h1> 
+    <h3 style="text-align:center">Make A Deposit</h3> 
+    <h1><img src="aktualnosci_6-1024x620.jpg" alt="asha" height="500px" width="750px" < h1> </h1> 
     <br> 
     <footer> 
      <div class="row"> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
-      <div class="col-4" style="background-color: cadetblue;"> 
+      <div class="col-4" style="background-color: cyan;"> 
        <div> 
         <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
@@ -2099,7 +2099,7 @@
     </footer> 
    </div> 
    <div class="tab-pane container fade" id="signin"> 
-    <h1>sign up</h1> 
+    <h1 style="text-align:center" style="color:red;">sign up</h1> 
     <form role="form"> 
      <div class="form-group"> 
       <label for="name" class="control-lable">Enter first name</label> 
@@ -2139,36 +2139,36 @@
     <br> 
     <footer> 
      <div class="row"> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
-      <div class="col-4" style="background-color: cadetblue;"> 
+      <div class="col-4" style="background-color: cyan;"> 
        <div> 
         <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
@@ -2371,7 +2371,7 @@
     </footer> 
    </div> 
    <div class="tab-pane container fade" id="login"> 
-    <h1>log in</h1> 
+    <h1 style=:"text-align:center">log in</h1> 
     <form role="form"> 
      <div class="form-group"> 
       <label for="email" class="control-lable">Enter Email</label> 
@@ -2400,36 +2400,36 @@
     <br> 
     <footer> 
      <div class="row"> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
-      <div class="col-4" style="background-color: cadetblue;"> 
+      <div class="col-4" style="background-color: cyan;"> 
        <div> 
         <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
-      <div class="col-4" style="background-color:cadetblue;"> 
+      <div class="col-4" style="background-color:cyan;"> 
        <div> 
         <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
