--- a/index.html
+++ b/index.html
@@ -1207,6 +1207,36 @@
       <input type="submit" value="submit"> 
      </div> 
     </div> 
+    
+     <form role="form"> 
+     <div class="form-group"> 
+      <label for="name" class="control-lable">Enter first name</label> 
+      <input type="text" name="name" id="name" class="form-control" placeholder="enter first name"> 
+     </div> <br>
+     <div class="form-group"> 
+      <label for="name" class="control-lable">Enter second name</label> 
+      <input type="text" name="name" id="name" class="form-control" placeholder="enter second name"> 
+     </div> <br>
+     <div class="form-group"> 
+      <label for="email" class="control-lable">Enter Email</label> 
+      <input type="email" name="email" id="email" class="form-control" placeholder="enter email"> 
+     </div> <br>
+     <div class="form-group"> 
+      <label for="number" class="control-label">Enter number</label> 
+      <input type="number" name="number" id="number" class="form-control" placeholder="enter password"> 
+     </div> <br>
+     <div class="form-group"> 
+      <label for="subject" class="control-label">Enter your subject</label> 
+      <input type="text" name="subject" id="subject" class="form-control" placeholder="re-enter password"> 
+     </div> <br>
+       
+    <div class="form-group"> 
+      <label for="message" class="control-label">Enter your message</label> 
+      <input type="text" name="message" id="message" class="form-control" placeholder="re-enter password"> 
+     </div> <br>
+     <div class="form-group"> 
+      <input type="submit" value="submit" class="btn btn-dark"> 
+     </div> 
     <div> 
      <img src="ContactUs.jpg"width="700px"height="500px"> 
     </div> 
