--- a/index.html
+++ b/index.html
@@ -1208,7 +1208,7 @@
       <input type="text" name="message" id="message" class="form-control" placeholder="re-enter password"> 
      </div> <br>
      <div class="form-group"> 
-      <input type="submit" value="submit" class="btn btn-dark"> 
+      <input type="submit" value="submit" class="btn btn-primary"> 
      </div> 
     <div> 
      <img src="ContactUs.jpg"width="700px"height="500px"> 
@@ -2372,7 +2372,7 @@
     </footer> 
    </div> 
    <div class="tab-pane container fade" id="login"> 
-    <h1 style=:"text-align:center">log in</h1> 
+    <h1 style="text-align:center">log in</h1> 
     <form role="form"> 
      <div class="form-group"> 
       <label for="email" class="control-lable">Enter Email</label> 
