--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    </div> 
   </div> 
   <!-- Nav tabs --> 
-  <ul class="nav nav-tabs"class="background-color:cyan;"> 
+  <ul class="nav nav-tabs"class="background-color:black;"> 
    <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#home"> 🏡Home</a> </li> 
    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#menu"> ☰ Menu</a> </li> 
    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#hospitals"> 🏥Hospitals</a> </li> 
